[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frodown"
version = "0.2.0"
description = "A Markdown editor with TUI interface"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Jose Cerrejon", email = "ulysess@gmail.com" }]
dependencies = ["tomli", "textual", "textual[syntax]", "httpx"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
testing = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.hatch.build.targets.wheel]
packages = ["src/frodown"]
